# espa

./: .gitignore  Cargo.toml  README.md  build  esp-assembler.cabal  ftests  ftests.py  package.yaml  stack.yaml
.github/workflows/: ci.yml  windows-exe.yml
app/: Main.hs
src/: main.rs
src/Data/Tes3/: Assembler.hs  Disassembler.hs  Parser.hs  Utils.hs
src/Data/Tes3/Assembler/: Native.hs
src/Data/Tes3/Disassembler/: Native.hs
src/Data/Tes3/Parser/: Native.hs
src/Data/Tes3/Utils/: Native.hs
src/Espa/: Cli.hs
src/Espa/Cli/: Native.hs
test/: Spec.hs
test/Data/Tes3/Parser/: Spec.hs
test/Data/Tes3/Utils/: Spec.hs
test_data/Saves/: 164.omwsave.xz  Alchemy.omwsave.xz  Quicksave.omwsave.xz  test.omwsave.xz
