[package]
edition = "2021"
name = "espa"
version = "0.6.11"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "A tool for converting ESM/ESP/ESS files to and from text format."
readme = "README.md"
keywords = ["esm", "esp", "ess", "mw", "yaml"]
categories = ["command-line-utilities", "encoding"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/espa"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[dependencies]
esl = "0.9.6"
clap = "4.0.14"
encoding = "0.2.33"
serde_yaml = "0.9.10"
uuid = { version = "1.1.2", features = ["v4"] }
either = "1.8.0"

[badges]
maintenance = { status = "actively-developed" }
