name:                esp-assembler
version:             0.10.1
synopsis:            A tool for converting ESM/ESP/ESS files to and from text format. 
description:         A tool for converting ESM/ESP/ESS files to and from text format. 
homepage:            https://github.com/A1-Triard/esp-assembler
license:             Apache
license-file:        LICENSE
author:              Warlock <internalmike@gmail.com>
maintainer:          Warlock <internalmike@gmail.com>
copyright:           2016, 2017 Warlock <internalmike@gmail.com>
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Data.Tes3.Assembler
                 , Data.Tes3.Assembler.Native
                 , Data.Tes3.Disassembler
                 , Data.Tes3.Disassembler.Native
                 , Data.Tes3.Parser
                 , Data.Tes3.Parser.Native
                 , Data.Tes3.Utils
                 , Data.Tes3.Utils.Native
                 , Espa.Cli
                 , Espa.Cli.Native
  other-modules: Paths_esp_assembler
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  build-depends: base >= 4.7 && < 5
               , MissingH
               , bytestring
               , errors
               , errors-ext
               , transformers
               , containers
               , binary
               , monad-loops
               , split
               , utility-ht
               , semigroups
               , binary-ext
               , utf8-string
               , base64-bytestring
               , attoparsec
               , text
               , mono-traversable
               , conduit
               , conduit-combinators
               , conduit-extra
               , directory
               , data-binary-ieee754
               , zlib
               , tes3
  ghc-options: -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

executable espa
  hs-source-dirs: app
  main-is: Main.hs
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  build-depends: base
               , esp-assembler
  default-language: Haskell2010

test-suite esp-assembler-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Data.Tes3.Parser.Spec
               , Data.Tes3.Utils.Spec
  default-extensions: CPP
                    , TemplateHaskell
                    , ViewPatterns
                    , MultiParamTypeClasses
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , StandaloneDeriving
                    , UnicodeSyntax
                    , MagicHash
                    , DefaultSignatures
                    , NegativeLiterals
                    , PatternSynonyms
                    , ParallelListComp
                    , TransformListComp
                    , MonadComprehensions
                    , UnboxedTuples
                    , LambdaCase
                    , EmptyCase
                    , EmptyDataDecls
                    , MultiWayIf
                    , TypeOperators
                    , TypeFamilies
                    , KindSignatures
                    , LiberalTypeSynonyms
                    , ExistentialQuantification
                    , GADTs
                    , DeriveAnyClass
                    , FlexibleContexts
                    , FlexibleInstances
                    , OverloadedStrings
                    , DataKinds
                    , ExplicitForAll
                    , BangPatterns
  include-dirs: include
  build-depends: base
               , HUnit
               , MissingH
               , attoparsec
               , base64-bytestring
               , binary
               , binary-ext
               , bytestring
               , conduit
               , conduit-combinators
               , conduit-extra
               , containers
               , data-binary-ieee754
               , directory
               , errors
               , errors-ext
               , esp-assembler
               , monad-loops
               , mono-traversable
               , semigroups
               , split
               , tes3
               , transformers
               , utility-ht
               , utf8-string
               , text
               , zlib
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/A1-Triard/esp-assembler.git
