name:                esp-assembler
version:             0.12
synopsis:            A tool for converting ESM/ESP/ESS files to and from text format.
description:         A tool for converting ESM/ESP/ESS files to and from text format.
homepage:            https://github.com/A1-Triard/esp-assembler
license:             Apache
license-file:        LICENSE
author:              Warlock <internalmike@gmail.com>
maintainer:          Warlock <internalmike@gmail.com>
copyright:           2016, 2017 Warlock <internalmike@gmail.com>
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Data.Tes3.Assembler
                 , Data.Tes3.Disassembler
                 , Data.Tes3.Parser
                 , Data.Tes3.Utils
                 , Espa.Cli
  other-modules: Paths_esp_assembler
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UndecidableInstances
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  build-depends: base >= 4.7 && < 5
               , MissingH
               , attoparsec
               , bytestring
               , containers
               , base64-bytestring
               , binary
               , binary-ext >= 2.0
               , conduit
               , conduit-combinators
               , conduit-extra
               , data-binary-ieee754
               , directory
               , errors
               , errors-ext
               , monad-loops
               , mono-traversable
               , mtl
               , semigroups
               , split
               , tes3
               , text
               , transformers
               , utf8-string
               , utility-ht
               , zlib
  ghc-options: -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

executable espa
  hs-source-dirs: app
  main-is: Main.hs
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UndecidableInstances
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  build-depends: base
               , esp-assembler
  default-language: Haskell2010

test-suite esp-assembler-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Data.Tes3.Parser.Spec
               , Data.Tes3.Utils.Spec
  default-extensions: BangPatterns
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , DeriveDataTypeable
                    , DeriveGeneric
                    , DeriveFoldable
                    , DeriveTraversable
                    , EmptyCase
                    , EmptyDataDecls
                    , ExistentialQuantification
                    , ExplicitForAll
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , KindSignatures
                    , LambdaCase
                    , LiberalTypeSynonyms
                    , MagicHash
                    , MonadComprehensions
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NegativeLiterals
                    , OverloadedStrings
                    , ParallelListComp
                    , PatternSynonyms
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TransformListComp
                    , TypeFamilies
                    , TypeOperators
                    , UnboxedTuples
                    , UndecidableInstances
                    , UnicodeSyntax
                    , ViewPatterns
  include-dirs: include
  build-depends: base
               , HUnit
               , esp-assembler
               , MissingH
               , attoparsec
               , bytestring
               , containers
               , base64-bytestring
               , binary
               , binary-ext >= 2.0
               , conduit
               , conduit-combinators
               , conduit-extra
               , data-binary-ieee754
               , directory
               , errors
               , errors-ext
               , monad-loops
               , mono-traversable
               , mtl
               , semigroups
               , split
               , tes3
               , text
               , transformers
               , utf8-string
               , utility-ht
               , zlib
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -fmax-pmcheck-iterations=10000000 -O2 -Wall -Werror -fno-warn-unused-imports
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/A1-Triard/esp-assembler.git
